fixeo de la barra (sin text-align) y orden final del style.css

--- a/cs/styles.css
+++ b/cs/styles.css
@@ -1,4 +1,5 @@
 
+/*principal*/
 /* Fondo transparente */
 
 .pagina-principal-container {
@@ -23,6 +24,23 @@
     margin-top: 10%;
     margin-left: 10%;
     position: absolute;
+}
+
+/*si se agranda o se achica la navbar, debes cambiar si o si #hero-principal, ya que se le tiene un margen en base a la navbar para que no colicionen*/
+#hero-principal{
+    margin-top: 97px;
+}
+
+.foto_principal {
+    display: flex;
+    flex-direction: column;
+}
+
+.pagina-principal-img {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
 }
 
 /* Margen de los logos, con los width pueden mover el tamaño */
@@ -89,50 +107,10 @@
     }
 }
 
-
-.pagina-principal-img {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-
-}
-
-
-
-/* boton diseño para redirigir a la pagina workers.html */
-
-.boton-trabajador {
-    color: var(--piel);
-    font-weight: 600;
-    padding: 10px 30px;
-    border-radius: 15px;
-    background-color: var(--rojo);
-    transition: background-color 0.5s ease;
-}
-
-.boton-trabajador:hover {
-    background-color: var(--amarillo);
-}
-
-
-/* de aqui para abajo todo es para cambiar la navbar, hay que rehacerla ya que no es una navbar de bootstrap */
-.container {
-    max-width: 1400px;
-    margin: auto;
-}
+/*header con el navbar*/
 
 header {
     background-color: #4f101a;
-
-}
-
-header .logo {
-    margin: 0px;
-    padding: 13px;
-    font-weight: bolder;
-    color: #dfd4cd;
-    font-size: 1.7em;
-
 }
 
 header .logo-container {
@@ -140,31 +118,45 @@ header .logo-container {
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    width: 300px;
-    margin-right: 50px;
+    margin-left: -320px;
 }
 
+/* controla el tamaño de la imagen del logo, recuerden que el logo es una mezcla de dos imagenes */
 header .logo-container img {
-    max-width: 120px;
     height: auto;
+    max-width: 120px;
     margin-top: 10px;
     margin-left: 40px;
     margin-right: -59px;
 }
 
-/*NAV*/
-
-.navbar a{
-    font-size: bold;
-}
+/*navbar*/
 
 .bg-body-tertiary {
     background-color: #4f101a !important;
 }
 
-.nav-item a{
-    color: #dfd4cd !important;
+.navbar a{
+    font-size: bold;
 }
+
+.navbar-nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navbar-nav .nav-link {
+    font-size: 19px;
+    text-align: center;
+    color: #dfd4cd;
+}
+
+/* margen entre los elementos del navbar, si le quieren dar un margen a esto cosa de ustedes, lo dejo igual pero no me gusto
+.navbar-nav .nav-item {
+    margin: 0 10px; 
+}
+*/
 
 /* NO ELIMINAR, GRACIAS A ESTO, LA NAVBAR SE MUEVE */
 #navbar{
@@ -185,11 +177,6 @@ header .logo-container img {
         text-align: center;
     }
 }
-
-.navbar-nav .nav-link {
-    font-size: 19px;
-}
-
 
 /* SECCION NOSOTROS*/
 
@@ -218,7 +205,6 @@ header .logo-container img {
 }
 
 .contenido-nosotros {
-
     padding: 3rem 2rem 5rem 2rem;
 }
 
@@ -248,16 +234,6 @@ header .logo-container img {
 
 }
 
-@media screen and (max-width: 768px) {
-
-    .contenedor-trabajador {
-        padding: 3rem;
-        flex-direction: column;
-
-    }
-
-}
-
 .carta-trabajador {
     margin: 2rem;
 }
@@ -275,6 +251,31 @@ header .logo-container img {
     background-color: var(--piel) !important;
 }
 
+/* boton diseño para redirigir a la pagina workers.html */
+
+.boton-trabajador {
+    color: var(--piel);
+    font-weight: 600;
+    padding: 10px 30px;
+    border-radius: 15px;
+    background-color: var(--rojo);
+    transition: background-color 0.5s ease;
+}
+
+.boton-trabajador:hover {
+    background-color: var(--amarillo);
+}
+
+@media screen and (max-width: 768px) {
+
+    .contenedor-trabajador {
+        padding: 3rem;
+        flex-direction: column;
+
+    }
+
+}
+
 /* SECCION Servicios */
 
 
@@ -290,20 +291,6 @@ header .logo-container img {
     padding-top: 10vh;
 
 }
-
-/*principal*/
-
-/*si se agranda o se achica la navbar, debes cambiar si o si #hero-principal, ya que se le tiene un margen en base a la navbar para que no colicionen*/
-#hero-principal{
-    margin-top: 30px;
-}
-
-.foto_principal {
-    display: flex;
-    flex-direction: column;
-}
-
-
 
 /* FOOTER */
 
